--- a/Project/tutorials/lrnsc.html
+++ b/Project/tutorials/lrnsc.html
@@ -329,7 +329,7 @@ And that’s all the important things you could possibly need to know about lift
     <div id="sidebar" style="left:100vw;">
         <div id="learn" onclick="lrn()">Tutorials
             <div id="learn_desc">
-                <div id="learn_desc_fix">Learn more about interesting languges in a colorful way!</div>
+                <div id="learn_desc_fix">Learn more about interesting languages in a colorful way!</div>
             </div>
         </div>
         <div id="tend" onclick="atc()">Articles
