--- a/Project/tutorials/index.html
+++ b/Project/tutorials/index.html
@@ -228,7 +228,7 @@
     <div id="sidebar" style="left:100vw;">
         <div id="learn" onclick="learn_pg()">Tutorials
             <div id="learn_desc">
-                <div id="learn_desc_fix">Learn more about interesting languges in a colorful way!</div>
+                <div id="learn_desc_fix">Learn more about interesting languages in a colorful way!</div>
             </div>
         </div>
         <div id="tend" onclick="article_pg()">Articles
