--- a/Project/tutorials/lrnjava.html
+++ b/Project/tutorials/lrnjava.html
@@ -639,7 +639,7 @@ Congratulations, you’ve made your own java desktop project! You can get the fu
     <div id="sidebar" style="left:100vw;">
         <div id="learn" onclick="lrn()">Tutorials
             <div id="learn_desc">
-                <div id="learn_desc_fix">Learn more about interesting languges in a colorful way!</div>
+                <div id="learn_desc_fix">Learn more about interesting languages in a colorful way!</div>
             </div>
         </div>
         <div id="tend" onclick="atc()">Articles
