--- a/Project/tutorials/lrnjul.html
+++ b/Project/tutorials/lrnjul.html
@@ -351,7 +351,7 @@ That’s it about Julia for now.
     <div id="sidebar" style="left:100vw;">
         <div id="learn" onclick="lrn()">Tutorials
             <div id="learn_desc">
-                <div id="learn_desc_fix">Learn more about interesting languges in a colorful way!</div>
+                <div id="learn_desc_fix">Learn more about interesting languages in a colorful way!</div>
             </div>
         </div>
         <div id="tend" onclick="atc()">Articles
