--- a/Project/tutorials/lrnktln.html
+++ b/Project/tutorials/lrnktln.html
@@ -529,7 +529,7 @@ And that’s pretty much it! Now you just have to add in the details found in th
     <div id="sidebar" style="left:100vw;">
         <div id="learn" onclick="lrn()">Tutorials
             <div id="learn_desc">
-                <div id="learn_desc_fix">Learn more about interesting languges in a colorful way!</div>
+                <div id="learn_desc_fix">Learn more about interesting languages in a colorful way!</div>
             </div>
         </div>
         <div id="tend" onclick="atc()">Articles
