--- a/Project/tutorials/lrnr.html
+++ b/Project/tutorials/lrnr.html
@@ -481,7 +481,7 @@ Balanced Accuracy           1.0000            1.0000           1.0000
     <div id="sidebar" style="left:100vw;">
         <div id="learn" onclick="lrn()">Tutorials
             <div id="learn_desc">
-                <div id="learn_desc_fix">Learn more about interesting languges in a colorful way!</div>
+                <div id="learn_desc_fix">Learn more about interesting languages in a colorful way!</div>
             </div>
         </div>
         <div id="tend" onclick="atc()">Articles
